# vidbuild

./: Cargo.toml  start-gentle.sh
example_project/: .gitignore  spec.json  test.txt
src/: clean.rs  gentle.rs  main.rs  spec.rs  timeline.rs
