[package]
name = "vidbuild"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
reqwest = {version = "0.11.4", default-features=false, features = ["blocking", "multipart"]}
multipart = "0.18.0"
rayon = "1.5.1"
png = "0.16.8"
subprocess = "0.2.7"

[profile.release]
lto = "fat"

[[bin]]
name = "vidbuild"
path = "src/main.rs"
[[bin]]
name = "vidbuild-humanify"
path = "src/clean.rs"